--- a/src/components/confirmation-dialogs.yml
+++ b/src/components/confirmation-dialogs.yml
@@ -9,7 +9,7 @@ deleteDocumentConfirmation:
   de: Möchten Sie das Dokument "{title}" wirklich löschen?
 deleteRoomConfirmation:
   en: Do you really want to delete room "{roomName}"?
-  de: Möchten Sie der Raum "{roomName}" wirklich löschen?
+  de: Möchten Sie den Raum "{roomName}" wirklich löschen?
 deleteCdnDocumentConfirmation:
   en: Do you really want to delete the CDN file "{fileName}"?
   de: Möchten Sie die Datei "{fileName}" wirklich vom CDN löschen?
