EDU-231 Correct lesson translation

--- a/src/components/pages/room.yml
+++ b/src/components/pages/room.yml
@@ -15,7 +15,7 @@ invitationsHeader:
   de: Ausstehende Einladungen ({count})
 lessonsTabTitle:
   en: Lessons
-  de: Unterrichte
+  de: Unterrichtseinheiten
 membersTabTitle:
   en: Room members
   de: Raummitglieder
