EDU-224 Add regenerate docs capabilities

--- a/src/components/pages/settings.yml
+++ b/src/components/pages/settings.yml
@@ -16,3 +16,9 @@ footerLinksHeader:
 defaultTagsHeader:
   en: Default tags
   de: Vordefinierte Tags
+createDocumentsBatchHeader:
+  en: Trigger document recreation
+  de: Dokumentwiederherstellung auslösen
+createDocumentsBatch:
+  en: Regenerate Documents
+  de: Dokumente neu erstellen
