EDU-224 Fix typo on translation

--- a/src/components/pages/settings.yml
+++ b/src/components/pages/settings.yml
@@ -20,5 +20,5 @@ createRegenerateDocumentsBatchHeader:
   en: Trigger document recreation
   de: Dokumentwiederherstellung auslösen
 createRegenerateDocumentsBatchButton:
-  en: Regenerate Documents
+  en: Regenerate documents
   de: Dokumente neu erstellen
