EDU-245 Add lesson page

--- a/src/resources/page-names.yml
+++ b/src/resources/page-names.yml
@@ -25,3 +25,6 @@ docs:
 room:
   en: Room - {roomName}
   de: Raum - {roomName}
+lesson:
+  en: Lesson - {lessonTitle}
+  de: Unterricht - {lessonTitle}
