EDU-245 Correct lesson title translation

--- a/src/resources/page-names.yml
+++ b/src/resources/page-names.yml
@@ -27,4 +27,4 @@ room:
   de: Raum - {roomName}
 lesson:
   en: Lesson - {lessonTitle}
-  de: Unterricht - {lessonTitle}
+  de: Unterrichtseinheit - {lessonTitle}
