EDU-246 Persist lesson schedule

--- a/src/components/lesson-creation-modal.yml
+++ b/src/components/lesson-creation-modal.yml
@@ -4,3 +4,6 @@ newLesson:
 titleRequired:
   en: Please specify a lesson title
   de: Bitte geben Sie einen Unterrichtseinheit Titel an
+startsOn:
+  en: Date
+  de: Datum
