EDU-241 Add blueprint document

--- a/src/components/document-creation-modal.yml
+++ b/src/components/document-creation-modal.yml
@@ -10,3 +10,6 @@ copySlugSuffix:
 titleRequired:
   en: Please specify a document title
   de: Bitte geben Sie einen Dokument Titel an
+useBlueprint:
+  en: Use blueprint
+  de: Blueprint benutzen
