--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "execa": "^5.1.1",
+    "fs-extra": "^10.0.0",
     "ghreleases": "^3.0.2",
     "git-semver-tags": "^4.1.1",
     "gulp": "^4.0.2",
@@ -134,6 +135,7 @@
     "http-proxy": "^1.18.1",
     "inquirer": "^8.2.0",
     "jest": "^27.2.5",
+    "jszip": "^3.7.1",
     "less-plugin-autoprefix": "^2.0.0",
     "node-mocks-http": "^1.11.0",
     "process": "^0.11.10",
