--- a/src/components/document-creation-modal.yml
+++ b/src/components/document-creation-modal.yml
@@ -9,7 +9,7 @@ copySlugSuffix:
   de: kopie
 titleRequired:
   en: Please specify a document title
-  de: Bitte geben Sie einen Dokument Titel an
+  de: Bitte geben Sie einen Dokumenttitel an
 useBlueprint:
   en: Use blueprint
   de: Blueprint benutzen
