EDU-244 Add German translation

--- a/src/components/pages/settings.yml
+++ b/src/components/pages/settings.yml
@@ -6,7 +6,7 @@ announcementPreview:
   de: Vorschau
 homepageInfoHeader:
   en: Homepage info
-  de: Help?
+  de: Homepage-Info
 helpPageHeader:
   en: Help page
   de: Hilfe-Seite
