NOTICKET: Correct translation

--- a/src/components/rooms-tab.yml
+++ b/src/components/rooms-tab.yml
@@ -3,7 +3,7 @@ ownedRoomsHeader:
   de: Meine Räume
 joinedRoomsHeader:
   en: Rooms I am a member of
-  de: Räume in denen ich Mitglied bin
+  de: Räume, in denen ich Mitglied bin
 joinedOn:
   en: Joined on
   de: Eingetreten am
