--- a/src/components/profile-tab.yml
+++ b/src/components/profile-tab.yml
@@ -36,7 +36,7 @@ avatarDescription:
     Please note that our website has no influence on the use of your data by this service.
     If you agree, you can create a profile <0>here</0>.
   de: |
-    Profilbilder sind durch den Internetdienst <0>Gravatar</0> geführt.
+    Profilbilder werden durch den Internetdienst <0>Gravatar</0> verwaltet.
     Ein Gravatar ist ein global verfügbarer Avatar (Globally Recognized Avatar), welcher mit Ihrer E-Mail-Adresse verknüpft ist.
     Dieser Dienst kann dann von anderen Webseiten benutzt werden, um ein Profilbild zu einer E-Mail-Adresse anzuzeigen.
     Beachten Sie bitte, dass unsere Website keinen Einfluss auf die Verwendung Ihrer Daten bei diesem Dienst hat.
