--- a/src/components/pages/room.yml
+++ b/src/components/pages/room.yml
@@ -28,6 +28,9 @@ lessonsPlaceholder:
 thisWeek:
   en: This week
   de: Diese Woche
+notScheduled:
+  en: not scheduled
+  de: nicht geplant
 deleteRoomButton:
   en: Delete room
   de: Raum löschen
