EDU-286 Make license configurable through settings

--- a/src/components/pages/settings.yml
+++ b/src/components/pages/settings.yml
@@ -28,3 +28,6 @@ createDocumentRegenerationBatchButton:
 templateDocumentHeader:
   en: Template for new documents
   de: Vorlage für neue Dokumente
+licenseHeader:
+  en: License
+  de: Lizenz
