EDU-287 Correct typos

--- a/src/components/pages/reset-password.yml
+++ b/src/components/pages/reset-password.yml
@@ -12,7 +12,7 @@ requestReset:
   de: Reset anfordern
 resetInProgressConfirmation:
   en: We have received your request.
-  de: Ihre Anfrage wurde ist bei uns eingegangen.
+  de: Ihre Anfrage ist bei uns eingegangen.
 resetInProgressNextSteps:
   en: |
     In case the provided email address is registered with our website, you will receive a
