EDU-290 Create plugin selector dialog

--- a/src/plugins/ear-training/ear-training.yml
+++ b/src/plugins/ear-training/ear-training.yml
@@ -1,6 +1,6 @@
 name:
-  en: Ear training exercise
-  de: Gehörbildungsübung
+  en: Ear training
+  de: Gehörbildung
 nextExercise:
   en: Next exercise
   de: Nächste Übung
