EDU-293 Render section revision in edit mode, if it exists

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -61,6 +61,9 @@ invalidSlug:
 archivedAlert:
   en: This document is archived and cannot be edited
   de: Dieses Dokument ist archiviert und kann nicht editiert werden
+revision:
+  en: Revision
+  de: Revision
 viewRevisions:
   en: View revisions
   de: Revisionen ansehen
