EDU-306 Remove header actions from page template

--- a/src/components/pages/doc-new.yml
+++ b/src/components/pages/doc-new.yml
@@ -1,7 +1,7 @@
 proposedSectionsAlert:
   en: |
     Apply or discard the proposed sections. Unapplied sections are
-    only visible until you leave the curent view.
+    only visible until you leave the current view.
   de: |
     Übernehmen oder verwerfen Sie die vorgeschlagenen Abschnitte. Nicht übernommene
     Abschnitte sind nur solange sichtbar, bis Sie die Ansicht verlassen.
