EDU-312 Enable batch lesson creation

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -142,3 +142,15 @@ description:
 url:
   en: URL
   de: URL
+daily:
+  en: daily
+  de: täglich
+weekly:
+  en: weekly
+  de: wöchentlich
+monthly:
+  en: monthly
+  de: monatlich
+yearly:
+  en: yearly
+  de: jährlich
