NOTICKET: Fix translation key

--- a/src/components/lesson-metadata-modal.yml
+++ b/src/components/lesson-metadata-modal.yml
@@ -13,7 +13,7 @@ startsOn:
 createSequence:
   en: Create sequence
   de: Reihe anlegen
-sequenceIntervall:
+sequenceInterval:
   en: Interval
   de: Intervall
 sequenceCount:
