--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@unly/iso3166-1": "^1.0.2",
     "abcjs": "^5.12.0",
     "accept-language-parser": "^1.5.0",
-    "antd": "^4.16.13",
+    "antd": "4.18.5",
     "any-base": "^1.1.0",
     "async": "^3.2.1",
     "auto-bind": "^5.0.1",
