EDU-303 Add edit metadata tooltip

--- a/src/components/edit-control-panel.yml
+++ b/src/components/edit-control-panel.yml
@@ -7,3 +7,6 @@ statusIconTooltipDirty:
 statusIconTooltipInvalid:
   en: Please correct all errors before saving
   de: Bitte korrigieren Sie alle Fehler vor dem Speichern
+editMetadata:
+  en: Edit metadata
+  de: Metadaten bearbeiten
