--- a/src/components/confirmation-dialogs.yml
+++ b/src/components/confirmation-dialogs.yml
@@ -13,6 +13,9 @@ deleteDocumentConfirmation:
 deleteRoomConfirmation:
   en: Do you really want to delete room "{roomName}"?
   de: Möchten Sie den Raum "{roomName}" wirklich löschen?
+deleteLessonConfirmation:
+  en: Do you really want to delete lesson "{lessonName}"?
+  de: Möchten Sie die Unterrichtseinheit "{lessonName}" wirklich löschen?
 deleteCdnDocumentConfirmation:
   en: Do you really want to delete the CDN file "{fileName}"?
   de: Möchten Sie die Datei "{fileName}" wirklich vom CDN löschen?
