EDU-329 Convert image-tiles plugin to functional component

--- a/src/components/confirmation-dialogs.yml
+++ b/src/components/confirmation-dialogs.yml
@@ -46,3 +46,6 @@ sessionExpiredTitle:
 sessionExpiredDescription:
   en: Your session has expired because you have been inactive for some time. Please login in order to continue this process.
   de: Ihre Sitzung ist abgelaufen, da Sie für einige Zeit inaktiv waren. Bitte melden Sie sich erneut an, um diesen Vorgang fortzusetzen.
+confirmDeleteImageTile:
+  en: Do you really want to delete this tile?
+  de: Möchten Sie diese Kachel löschen?
