--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "async": "^3.2.1",
     "auto-bind": "^5.0.1",
     "aws-sdk": "^2.1006.0",
-    "axios": "^0.24.0",
+    "axios": "^0.25.0",
     "bcrypt": "^5.0.1",
     "classnames": "^2.3.1",
     "clipboard-copy": "^4.0.1",
@@ -44,7 +44,6 @@
     "decompress": "^4.2.1",
     "del": "^6.0.0",
     "dropperx": "^1.0.1",
-    "esbuild": "^0.14.16",
     "escape-string-regexp": "^5.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -69,9 +68,9 @@
     "md5": "^2.3.0",
     "memoizee": "^0.4.15",
     "mime": "^2.5.2",
-    "minio": "^7.0.19",
+    "minio": "^7.0.26",
     "moment": "^2.29.1",
-    "mongodb": "4.1.4",
+    "mongodb": "^4.3.1",
     "multer": "^1.4.3",
     "node-graceful": "^3.1.0",
     "nodemailer": "^6.7.0",
@@ -104,43 +103,18 @@
     "stream-to-array": "^2.3.0",
     "thenby": "^1.3.4",
     "toposort": "^2.0.2",
-    "umzug": "^v3.0.0-beta.16",
+    "umzug": "^3.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@educandu/dev-tools": "^1.0.0",
     "@educandu/rooms-auth-lambda": "^1.0.1",
-    "@jest/globals": "^27.3.1",
-    "@rauschma/stringio": "^1.4.0",
-    "axios-retry": "^3.2.4",
-    "chalk": "^5.0.0",
-    "commits-between": "^0.2.0",
-    "docker-cli-js": "^2.8.0",
-    "envalid": "^7.2.2",
-    "eslint": "^8.1.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "execa": "^5.1.1",
-    "fs-extra": "^10.0.0",
-    "ghreleases": "^3.0.2",
-    "git-semver-tags": "^4.1.1",
+    "eslint": "^8.8.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "gulp": "^4.0.2",
-    "gulp-csso": "^4.0.1",
-    "gulp-eslint": "^6.0.0",
-    "gulp-if": "^3.0.0",
-    "gulp-less": "^5.0.0",
-    "gulp-plumber": "^1.2.1",
-    "gulp-sourcemaps": "^3.0.0",
-    "http-proxy": "^1.18.1",
-    "inquirer": "^8.2.0",
-    "jest": "^27.2.5",
-    "jszip": "^3.7.1",
-    "less-plugin-autoprefix": "^2.0.0",
     "node-mocks-http": "^1.11.0",
-    "process": "^0.11.10",
-    "semver": "^7.3.5",
-    "sinon": "^11.1.2",
-    "yaml": "^1.10.2",
-    "yargs": "^17.3.0"
+    "sinon": "^11.1.2"
   }
 }
