EDU-340 Add import button on top of import page and correct row selection styling

--- a/src/components/pages/import-batch-view.yml
+++ b/src/components/pages/import-batch-view.yml
@@ -19,6 +19,9 @@ taskStatusFailed:
 taskStatusDoneWithWarnings:
   en: Done (with warnings)
   de: Abgeschlossen (mit Warnungen)
+batchSource:
+  en: Batch source
+  de: Chargenquelle
 batchStatus:
   en: Batch status
   de: Chargenstatus
