EDU-351 Add storage plan to users

--- a/src/components/pages/users.yml
+++ b/src/components/pages/users.yml
@@ -43,3 +43,9 @@ internalUsers:
 externalUsers:
   en: External users
   de: Externe Benutzer
+storage:
+  en: Storage
+  de: Speicher
+selectPlan:
+  en: Select plan
+  de: Plan auswählen
