EDU-356 Show storage tab on MySpace page

--- a/src/components/pages/my-space.yml
+++ b/src/components/pages/my-space.yml
@@ -7,3 +7,9 @@ accountTabTitle:
 roomsTabTitle:
   en: Rooms
   de: Räume
+storagePlanLabel:
+  en: storage plan
+  de: Speicherplan
+usedStorageLabel:
+  en: Used
+  de: Benutzt
