--- a/src/components/pages/my-space.yml
+++ b/src/components/pages/my-space.yml
@@ -10,6 +10,9 @@ roomsTabTitle:
 storagePlanLabel:
   en: storage plan
   de: Speicherplan
+noStoragePlanLabel:
+  en: No storage plan
+  de: Kein Speicherplan
 usedStorageLabel:
   en: Used
   de: Benutzt
