EDU-365 Add description field to documents

--- a/src/components/document-metadata-modal.yml
+++ b/src/components/document-metadata-modal.yml
@@ -7,6 +7,9 @@ editDocument:
 titleRequired:
   en: Please specify a document title
   de: Bitte geben Sie einen Dokument-Titel an
+descriptionTooLong:
+  en: The description cannot have more than 1000 characters
+  de: Die Beschreibung darf nicht länger als 1000 Zeichen sein
 useTemplateDocument:
   en: Use default template
   de: Standardvorlage benutzen
