EDU-357 Add client side guard against exceeding storage space

--- a/src/components/storage-browser.yml
+++ b/src/components/storage-browser.yml
@@ -31,3 +31,6 @@ publicStorage:
 privateStorage:
   en: Private storage
   de: Privater Speicher
+insufficientPrivateStorge:
+  en: Not enough storage space available
+  de: Nicht genügend Speicherplatz verfügbar
