EDU-413 Redesign search results table

--- a/src/components/pages/search.yml
+++ b/src/components/pages/search.yml
@@ -15,3 +15,9 @@ sorting:
 relevance:
   en: Relevance
   de: Relevanz
+createdOn:
+  en: Created
+  de: Erstellt
+updatedOn:
+  en: Last update
+  de: Letztes Update
