--- a/src/components/sorting-selector.yml
+++ b/src/components/sorting-selector.yml
@@ -1,3 +1,9 @@
 selectedValue:
   en: Sort by "{value}"
   de: Nach "{value}" sortieren
+changeSortingValue:
+  en: Change sorting
+  de: Sortierung ändern
+changeSortingDirection:
+  en: Change sorting direction
+  de: Sortierungsrichtung ändern
