EDU-432 Fix sorting translation and improve texts

--- a/src/components/tag-selector.yml
+++ b/src/components/tag-selector.yml
@@ -3,7 +3,7 @@ linkTextSelectMore:
   de: + Mehr
 linkTextSelectFirst:
   en: + Add tag filter
-  de: + Tag Filter hinzufügen
+  de: + Tag-Filter hinzufügen
 searchPlaceholder:
   en: Search
   de: Suchen
