--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -100,6 +100,9 @@ createdBy:
 updatedOn:
   en: Update date
   de: Update-Datum
+relevance:
+  en: Relevance
+  de: Relevanz
 owner:
   en: Owner
   de: Eigentümer
@@ -190,3 +193,18 @@ storage:
 actions:
   en: Actions
   de: Aktionen
+sortedByRelevance:
+  en: Sorted by relevance
+  de: Nach Relevanz sortiert
+sortedByTitle:
+  en: Sorted by title
+  de: Nach Titel sortiert
+sortedByLanguage:
+  en: Sorted by language
+  de: Nach Sprache sortiert
+sortedByCreatedOn:
+  en: Sorted by creation date
+  de: Nach Erstellungsdatum sortiert
+sortedByUpdatedOn:
+  en: Sorted by update date
+  de: Nach Änderungsdatum sortiert
