EDU-425 Rename My Space to Dashboard

--- a/src/resources/page-names.yml
+++ b/src/resources/page-names.yml
@@ -4,9 +4,9 @@ home:
 users:
   en: Users
   de: Benutzer
-mySpace:
-  en: My space
-  de: Mein Bereich
+dashboard:
+  en: Dashboard
+  de: Dashboard
 settings:
   en: Settings
   de: Einstellungen
