EDU-427 Correct translation

--- a/src/components/news-tab.yml
+++ b/src/components/news-tab.yml
@@ -21,7 +21,7 @@ roomMarkedFavoriteActivity:
   de: Raum als Favorit hinzugefügt
 roomJoinedActivity:
   en: Private room joined
-  de: Privater Raum eingetreten
+  de: Privatem Raum beigetreten
 lessonCreatedActivity:
   en: New lesson created
   de: Neue Unterrichtseinheit erstellt
