EDU-428 Add favorites tab with mock data

--- a/src/components/pages/dashboard.yml
+++ b/src/components/pages/dashboard.yml
@@ -1,6 +1,9 @@
 newsTabTitle:
   en: News
   de: Neuigkeiten
+favoritesTabTitle:
+  en: Favorites
+  de: Favoriten
 profileTabTitle:
   en: Profile
   de: Profil
