EDU-448 Show warning for small images

--- a/src/plugins/image/image.yml
+++ b/src/plugins/image/image.yml
@@ -46,3 +46,6 @@ orientationOptionVertical:
 orientationOptionHorizontal:
   en: Horizontal
   de: Horizontal
+smallImageSizeWarning:
+  en: The selected image has a smaller width than the page content and might therefore be displayed smaller than expected.
+  de: Das von Ihnen gewählte Bild hat eine geringere Breite als der Seiteninhalt und wird deshalb unter Umständen kleiner als erwartet angezeigt.
