EDU-453 Distinguish room invitation invalidation reasons

--- a/src/components/pages/room-membership-confirmation.yml
+++ b/src/components/pages/room-membership-confirmation.yml
@@ -7,9 +7,15 @@ invitationConfirmation:
 joinButton:
   en: Join room
   de: Raum beitreten
-invalidOrExpiredInvitationCode:
+invalidToken:
   en: The invitation code is invalid or expired.
   de: Der Einladungs-Code ist ungültig oder abgelaufen.
+invalidUser:
+  en: The invitation was addressed to a different user.
+  de: Der Einladung war an einen anderen Benutzer adressiert.
+invalidRoom:
+  en: The room no longer exists.
+  de: Der Raum existiert nicht mehr.
 homeLink:
   en: Home
   de: Home
