EDU-434 Correct German translation

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -240,7 +240,7 @@ sortedByOrigin:
   de: Nach Quelle sortiert
 sortedByArchived:
   en: Sorted by archived status
-  de: Nach Archiviert Status sortiert
+  de: Nach Archivierungsstatus sortiert
 searchPlaceholder:
   en: Search terms
   de: Suchbegriffe
