--- a/src/plugins/video/video.yml
+++ b/src/plugins/video/video.yml
@@ -37,3 +37,6 @@ width:
 copyrightInfos:
   en: Copyright infos
   de: Copyright Infos
+posterImageUrl:
+  en: Preview image URL
+  de: Vorschau Bild URL
