--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "react-dom": "^16.14.0",
     "react-highlighter": "^0.4.3",
     "react-i18next": "^11.12.0",
+    "react-pdf": "^5.7.1",
     "react-piano": "^3.1.3",
     "react-player": "^2.9.0",
     "react-soundplayer": "^1.0.5",
