--- a/src/plugins/quick-tester/quick-tester.yml
+++ b/src/plugins/quick-tester/quick-tester.yml
@@ -25,3 +25,9 @@ testsOrderGiven:
 testsOrderRandom:
   en: random
   de: zufällig
+renderMedia:
+  en: Render media
+  de: Medien wiedergeben
+renderMediaInfo:
+  en: Will be applied to the question and answer text, not the link text and title
+  de: Bezieht sich nur auf den Fragen- und Antworttext, nicht auf den Link-Text und Titel
