EDU-422 Various fixes and enhancements
* Add missing trahnslation
* Fix `maxBytes` number fallback
* Rename role to reflect it is for built-in users only

--- a/src/components/storage-plan-modal.yml
+++ b/src/components/storage-plan-modal.yml
@@ -7,3 +7,6 @@ editStoragePlan:
 storagePlanNameIsInUse:
   en: This name is already in use
   de: Dieser Name ist bereits in Benutzung
+nameRequired:
+  en: Please specify a name
+  de: Bitte geben Sie einen Namen an
